responsive videos are now better looking on mobile & Linux page fixes

--- a/public/css/linux.css
+++ b/public/css/linux.css
@@ -86,6 +86,40 @@
   transform: scale(1.1);
 }
 
+.picture-linux-bios {
+  position: relative;
+  height: 430px;
+  width: 760px;
+  border-radius: 16px;
+  display: block;
+  margin-bottom: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url('');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: #36393F;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07),
+    0 2px 4px rgba(0, 0, 0, 0.07),
+    0 4px 8px rgba(0, 0, 0, 0.07),
+    0 8px 16px rgba(0, 0, 0, 0.07),
+    0 16px 32px rgba(0, 0, 0, 0.07),
+    0 32px 64px rgba(0, 0, 0, 0.07);
+  -moz-transform: scale(1);
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  transition: 0.7s ease all;
+  -webkit-transition: 0.7s ease all;
+  -moz-transition: 0.7s ease all;
+}
+
+.picture-linux-bios:hover {
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
 h1 {
   overflow: hidden;
   text-align: center;
@@ -131,6 +165,13 @@ h1:after {
     width: 85%;
     height: 85%;
     margin-bottom: 20px;
+    background-color: transparent;
+  }
+
+  .picture-linux-bios {
+    width: 80%;
+    height: 80%;
+    margin-bottom: 70px;
     background-color: transparent;
   }
 
